get sbt run options from project sbt configuration instead of using defaults/hardcoded values